# PyMemoryEditor

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questioning.md
.github/workflows/: delete-pr-branch.yml  lint-pr-title.yml  python-package.yml
PyMemoryEditor/: __init__.py  __main__.py  enums.py  errors.py  open_process.py  util.py
PyMemoryEditor/app/: __init__.py  _icon.py  _widgets.py  application.py  cheat_entry.py  cheat_poll_worker.py  cheat_table.py  log_console_dialog.py  main_window.py  memory_map_dialog.py  memory_viewer_dialog.py  modules_dialog.py  open_process_dialog.py  pointer_chain_dialog.py  pointer_scan_dialog.py  results_view.py  scan_types.py  scan_worker.py  scanner_panel.py  threads_dialog.py  value_types.py
PyMemoryEditor/linux/: functions.py  libc.py  process.py  types.py
PyMemoryEditor/linux/ptrace/: __init__.py  enums.py
PyMemoryEditor/macos/: __init__.py  functions.py  libsystem.py  process.py  types.py
PyMemoryEditor/process/: __init__.py  abstract.py  errors.py  info.py  module_info.py  pointer_scan.py  region.py  remote_pointer.py  scanning.py  thread_info.py  util.py
PyMemoryEditor/sample/: application.py  main_application_window.py  open_process_window.py
PyMemoryEditor/util/: __init__.py  convert.py  pattern.py  scan.py
PyMemoryEditor/util/search/: bmh.py  kmp.py
PyMemoryEditor/win32/: constants.py  enum.py  functions.py  process.py  types.py  util.py
PyMemoryEditor/win32/enums/: __init__.py  memory_allocation_states.py  memory_protections.py  memory_types.py  process_operations.py  scan_types.py  standard_access_rights.py
docs/: app.md  conf.py  glossary.md  index.md  installation.md  platform-notes.md  quickstart.md  requirements.txt  troubleshooting.md
docs/_static/: custom.css
docs/_templates/sidebar/: brand.html
docs/api/: enums.md  errors.md  index.md  memory-region.md  module-info.md  openprocess.md  pointer-path.md  remote-pointer.md  thread-info.md  utilities.md
docs/guide/: allocate-free.md  index.md  logging.md  memory-regions.md  modules-threads.md  opening-process.md  pattern-scan.md  pointer-scan.md  pointers.md  read-write.md  searching.md
scripts/: generate_app_screenshot.py
tests/: conftest.py  package.py  test_allocate_free.py  test_app_smoke.py  test_bufflength_inference.py  test_cheat_poll_worker.py  test_chunking_integration.py  test_editor.py  test_errors.py  test_linux_types.py  test_logger.py  test_macos_protect.py  test_module_enumeration.py  test_partial_io.py  test_partial_name_match.py  test_pattern_compile.py  test_pattern_scan.py  test_pointer_chain.py  test_pointer_scan.py  test_process_lookup.py  test_refine_scan_worker.py  test_region_snapshot.py  test_remote_pointer.py  test_scan.py  test_scan_properties.py  test_scanning_helper.py  test_str_boundary.py  test_str_decode_consistency.py  test_thread_enumeration.py  test_win32_permissions.py
