[project]
name = "PyMemoryEditor"
dynamic = ["version"]
description = "Multi-platform library developed with ctypes for reading, writing and searching at process memory, in a simple and friendly way with Python 3."
authors = [
    { name = "Jean Loui Bernard Silva de Jesus", email = "jeanextreme002@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = [
    "memory",
    "address",
    "pointer",
    "process",
    "virtual",
    "writer",
    "reader",
    "editor",
    "override",
    "win32", "api", "ctypes", "linux", "macos", "mach",
    "cheat", "scanner", "debug", "track",
    "readprocessmemory", "writeprocessmemory"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: System :: Monitoring"
]
exclude = ["tests", ".flake8"]
requires-python = ">=3.8"
dependencies = ["psutil>=5.9,<7"]

[project.optional-dependencies]
tests = [
  "pytest",
]
app = [
  "PySide6>=6.5",
]
dev = [
  "pytest",
  "pytest-cov",
  "flake8",
  "mypy",
  "build",
  "twine",
]

[project.urls]
"Homepage" = "https://github.com/JeanExtreme002/PyMemoryEditor"

[tool.mypy]
# The Qt app uses dynamic types and depends on the optional PySide6 GUI
# toolkit, so it isn't worth annotating strictly. Library code under
# PyMemoryEditor/ (excluding app/) is the surface that ships with
# `py.typed` and should aim for clean mypy output over time.
exclude = ["PyMemoryEditor/app/"]
ignore_missing_imports = true
# Initial pass: surface issues without immediately blocking CI. Tighten this
# over time as the pre-existing type debt gets paid down.
warn_unused_ignores = true

# Platform-specific backends use symbols that only exist on their target OS
# (`ctypes.windll`, `WINFUNCTYPE`, `WinError`, `set_last_error`, etc. on
# Windows; Mach types on macOS). mypy running on a single OS sees the others
# as undefined. The shared layer (process/, util/) is still type-checked.
[[tool.mypy.overrides]]
module = [
    "PyMemoryEditor.win32.*",
    "PyMemoryEditor.linux.*",
    "PyMemoryEditor.macos.*",
]
ignore_errors = true

[tool.hatch.version]
path = "PyMemoryEditor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["PyMemoryEditor"]

[tool.hatch.build.targets.wheel.force-include]
"PyMemoryEditor/py.typed" = "PyMemoryEditor/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pymemoryeditor = "PyMemoryEditor.app.application:main"